[package]
name = "nc-vhost"
version = "0.1.0"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.0"
once_cell = "1.7"

[[bin]]
name = "back-server"
path = "src/back_server.rs"

[[bin]]
name = "front-server"
path = "src/front_server.rs"

[[bin]]
name = "client"
path = "src/client.rs"